--- a/RitsukageBot/RitsukageBot/packages.config
+++ b/RitsukageBot/RitsukageBot/packages.config
@@ -36,4 +36,5 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="Unity" version="5.8.6" targetFramework="net45" requireReinstallation="true" />
   <package id="WebSocket4Net" version="0.15.2" targetFramework="net472" />
+  <package id="WebSocketSharp.Standard" version="1.0.3" targetFramework="net472" />
 </packages>
