--- a/RitsukageBot/RitsukageBot/RitsukageBot.csproj
+++ b/RitsukageBot/RitsukageBot/RitsukageBot.csproj
@@ -71,6 +71,9 @@
     <Reference Include="Google.Protobuf, Version=3.6.1.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
       <HintPath>..\packages\Google.Protobuf.3.6.1\lib\net45\Google.Protobuf.dll</HintPath>
     </Reference>
+    <Reference Include="JetBrains.Annotations, Version=2019.1.3.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
+      <HintPath>..\packages\JetBrains.Annotations.2019.1.3\lib\net20\JetBrains.Annotations.dll</HintPath>
+    </Reference>
     <Reference Include="KeraLua, Version=1.0.24.0, Culture=neutral, PublicKeyToken=6a194c04b9c89217, processorArchitecture=MSIL">
       <HintPath>..\packages\KeraLua.1.0.24\lib\net45\KeraLua.dll</HintPath>
     </Reference>
@@ -255,6 +258,11 @@
       <DependentUpon>CQExport.tt</DependentUpon>
     </Compile>
     <Compile Include="App\CQMain.cs" />
+    <Compile Include="App\LuaEnv\BilibiliLiveDanmaku_Events.cs" />
+    <Compile Include="App\LuaEnv\BilibiliLiveDanmaku_GiftRank.cs" />
+    <Compile Include="App\LuaEnv\BilibiliLiveDanmaku_Socket.cs" />
+    <Compile Include="App\LuaEnv\BilibiliLiveDanmaku_SocketReceiveData.cs" />
+    <Compile Include="App\LuaEnv\BiliLive.cs" />
     <Compile Include="App\LuaEnv\ByteDataBuilder.cs" />
     <Compile Include="App\LuaEnv\LuaStates.cs" />
     <Compile Include="App\LuaEnv\MySQLData.cs" />
