--- a/RitsukageBot/RitsukageBot/packages.config
+++ b/RitsukageBot/RitsukageBot/packages.config
@@ -4,6 +4,7 @@
   <package id="Costura.Fody" version="1.6.2" targetFramework="net45" developmentDependency="true" />
   <package id="Fody" version="2.2.1.0" targetFramework="net45" developmentDependency="true" requireReinstallation="true" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
+  <package id="JetBrains.Annotations" version="2019.1.3" targetFramework="net472" />
   <package id="KeraLua" version="1.0.24" targetFramework="net45" />
   <package id="LibGit2Sharp" version="0.24.1" targetFramework="net45" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.205" targetFramework="net45" />
