--- a/RitsukageBot/RitsukageBot/packages.config
+++ b/RitsukageBot/RitsukageBot/packages.config
@@ -15,11 +15,13 @@
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
   <package id="NLua" version="1.4.26" targetFramework="net45" />
   <package id="PropertyChanged.Fody" version="2.2.4.0" targetFramework="net45" developmentDependency="true" requireReinstallation="true" />
+  <package id="QRCoder" version="1.3.6" targetFramework="net472" />
   <package id="SimpleTCP" version="1.0.24" targetFramework="net45" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
   <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net472" />
   <package id="SuperWebSocket" version="0.9.0.2" targetFramework="net472" />
   <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="4.5.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net472" />
