--- a/RitsukageBot/RitsukageBot/RitsukageBot.csproj
+++ b/RitsukageBot/RitsukageBot/RitsukageBot.csproj
@@ -264,6 +264,7 @@
       <DependentUpon>CQExport.tt</DependentUpon>
     </Compile>
     <Compile Include="App\CQMain.cs" />
+    <Compile Include="App\LuaEnv\Socket\HTTPListener.cs" />
     <Compile Include="App\LuaEnv\Socket\Ritsukage\DayCheckInMonth.cs" />
     <Compile Include="App\LuaEnv\Socket\Ritsukage\RUOpCode.cs" />
     <Compile Include="App\LuaEnv\Socket\Ritsukage\RUPack.cs" />
