--- a/RitsukageBot/RitsukageBot/RitsukageBot.csproj
+++ b/RitsukageBot/RitsukageBot/RitsukageBot.csproj
@@ -71,6 +71,9 @@
     <Reference Include="Google.Protobuf, Version=3.6.1.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
       <HintPath>..\packages\Google.Protobuf.3.6.1\lib\net45\Google.Protobuf.dll</HintPath>
     </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=1.2.0.246, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpZipLib.1.2.0\lib\net45\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
     <Reference Include="JetBrains.Annotations, Version=2019.1.3.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <HintPath>..\packages\JetBrains.Annotations.2019.1.3\lib\net20\JetBrains.Annotations.dll</HintPath>
     </Reference>
@@ -153,6 +156,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Management" />
+    <Reference Include="System.Net" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.NameResolution, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Net.NameResolution.4.3.0\lib\net46\System.Net.NameResolution.dll</HintPath>
@@ -204,6 +208,7 @@
       <Private>True</Private>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Text.RegularExpressions, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Text.RegularExpressions.4.3.0\lib\net463\System.Text.RegularExpressions.dll</HintPath>
@@ -279,10 +284,10 @@
     <Compile Include="App\LuaEnv\Tools\ByteDataBuilder.cs" />
     <Compile Include="App\LuaEnv\LuaStates.cs" />
     <Compile Include="App\LuaEnv\Tools\EncodingConvert.cs" />
+    <Compile Include="App\LuaEnv\Tools\Git.cs" />
     <Compile Include="App\LuaEnv\Tools\Image.cs" />
     <Compile Include="App\LuaEnv\Tools\Manager\GroupInfo.cs" />
     <Compile Include="App\LuaEnv\Tools\Manager\GroupList.cs" />
-    <Compile Include="App\LuaEnv\Tools\MySQLData.cs" />
     <Compile Include="App\LuaEnv\Tools\QRCode.cs" />
     <Compile Include="App\LuaEnv\Tools\Rand.cs" />
     <Compile Include="App\LuaEnv\Settings.cs" />
@@ -348,6 +353,7 @@
       <Name>RitsukageBot.UI</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ImportGroup Label=".NET DllExport" />
   <ImportGroup Label=".NET DllExport" />
