--- a/RitsukageBot/RitsukageBot/packages.config
+++ b/RitsukageBot/RitsukageBot/packages.config
@@ -16,6 +16,7 @@
   <package id="NLua" version="1.4.26" targetFramework="net45" />
   <package id="PropertyChanged.Fody" version="2.2.4.0" targetFramework="net45" developmentDependency="true" requireReinstallation="true" />
   <package id="QRCoder" version="1.3.6" targetFramework="net472" />
+  <package id="SharpZipLib" version="1.2.0" targetFramework="net472" />
   <package id="SimpleTCP" version="1.0.24" targetFramework="net45" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
   <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net472" />
