添加MC服务器的信息获取

--- a/RitsukageBot/Native.Csharp.Sdk/Native.Csharp.Sdk.csproj
+++ b/RitsukageBot/Native.Csharp.Sdk/Native.Csharp.Sdk.csproj
@@ -127,6 +127,10 @@
     <Compile Include="Cqp\Model\StrangerInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
